--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1 {
-    color: blue;
+    color: rgb(0, 0, 0);
     font-size: 24px;
     {body}
-    background-color: yellow;
+    background-color: : #f0f0f0;
 }
